--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,29 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Eyad Gad
     - name: Date of Birth
-      value: 14th March 1879
+      value: 
+    - name: Email
+      value: <a href="mailto:eyad.gad@outlook.com">eyad.gad@outlook.com</a>
     - name: Languages
-      value: English, German
+      value: English, Arabic
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MSc
+      institution: University of Western Ontario, London, Canada
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title: Master of Science (Thesis) in Computer Science
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            - Thesis&#58; Combating IoT Attacks In AI-Driven Networks Via Robust And Resource-Efficient Federated Learning, Supervised by <em><a href="https://www.zfadlullah.org/" target="_blank">Prof. Zubair Fadlullah</a></em>
+            - Relevant Courses&#58; Smart Cyber-Physical Systems, Theoretical Machine Learning, Networks Security, Convex Optimization
+    - title: BASc
+      institution: Nile University, Giza, Egypt
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Bachelor of Applied Science (Honours) in Computer Engineering
+        - Thesis&#58; Advancing Brain Tumor Segmentation via Attention-based 3D U-Net Architecture and Digital Image Processing, Supervised by <em><a href="https://eas.nu.edu.eg/academic-staff/dr-mohamed-s-darweesh" target="_blank">Prof. Mohamed S. Darweesh</a></em>
 
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
