--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,13 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - eyadgad
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - eyadgad/Federated-Learning-Based-IoT-Attack-Detection-in-IID-and-Non-IID
+  - eyadgad/Breast-Cancer-Segmentation-Using-U-Net-and-FedProx
+  - eyadgad/Early-Detection-of-Alzheimers-Disease-Based-on-Clinical-and-Neuroimaging-Features
+  - eyadgad/Digital-IC-Design-of-ALU-Using-Cadence
+  - eyadgad/8086-Based-RPN-Calculator
+  - eyadgad/IoT-based-Smart-Home-using-Jetson-Nano-and-Cloud-interface
+  - eyadgad/Real-Time-Car-Counting-Based-on-Digital-Image-Processing
