--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Eyad
 middle_name:
 last_name: Gad
-keywords: eyad-gad, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: eyad-gad, gad, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
@@ -43,9 +43,9 @@ images:
 repo_theme_light: default # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
 repo_theme_dark: dark # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
 repo_trophies:
-  enabled: true
+  enabled: False
   theme_light: flat # https://github.com/ryo-ma/github-profile-trophy
-  theme_dark: gitdimmed # https://github.com/ryo-ma/github-profile-trophy
+  theme_dark: dracula # https://github.com/ryo-ma/github-profile-trophy
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -66,7 +66,7 @@ posts_in_search: true
 bib_search: true
 
 # Dimensions
-max_width: 1100px
+max_width: 950px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -393,7 +393,7 @@ enable_google_analytics: false # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
 enable_pirsch_analytics: false # enables Pirsch analytics (https://pirsch.io/)
 enable_openpanel_analytics: false # enables Openpanel analytics (https://openpanel.dev/)
-enable_google_verification: false # enables google site verification
+enable_google_verification: True # enables google site verification
 enable_bing_verification: false # enables bing site verification
 enable_masonry: true # enables automatic project cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
