--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -29,7 +29,7 @@ linkedin_username: eyadgad # your LinkedIn user name
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
-rss_icon: False # comment this line to hide the RSS icon
+# rss_icon: True # comment this line to hide the RSS icon
 scholar_userid: Vmjcp8gAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
