Editing the Config File

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ repo_theme_dark: dark # https://github.com/anuraghazra/github-readme-stats/blob/
 repo_trophies:
   enabled: False
   theme_light: flat # https://github.com/ryo-ma/github-profile-trophy
-  theme_dark: dracula # https://github.com/ryo-ma/github-profile-trophy
+  theme_dark: juicyfresh # https://github.com/ryo-ma/github-profile-trophy
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -60,7 +60,7 @@ rss_icon: false
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: False
 socials_in_search: true
 posts_in_search: true
 bib_search: true
