--- a/_config.yml
+++ b/_config.yml
@@ -245,8 +245,6 @@ sass:
 jekyll-minifier:
   compress_javascript: false # set to false since we are using terser as the js minifier
   exclude: ["robots.txt", "assets/js/search/*.js", "assets/libs/**/*"]
-  uglifier_args:
-    harmony: true
 # -----------------------------------------------------------------------------
 # Terser
 # -----------------------------------------------------------------------------
@@ -361,7 +359,7 @@ external_links:
 # MAKE SURE imagemagick is installed and on your PATH before enabling imagemagick. In a terminal, run:
 #   convert -version
 imagemagick:
-  enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
+  enabled: false # disabled due to Windows path issues - can be re-enabled after fixing ImageMagick installation
   widths:
     - 480
     - 800
