edit the profile name

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Eyad
+first_name: EYAD
 middle_name:
-last_name: Gad
+last_name: GAD
 keywords: eyad-gad, gad, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
