--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: EYAD
 middle_name:
 last_name: GAD
+# Toggle watermelon-styled name on the about page
+watermelon_name: false
 keywords: eyad-gad, gad, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
